--- a/index.html
+++ b/index.html
@@ -56,21 +56,37 @@
       margin-left: auto;
       margin-right: auto;
     }
-    #gameGallery {
-      display: none;
-      margin-top: 30px;
-    }
-    iframe#gameFrame {
-      display: none;
-      width: 90%;
-      height: 600px;
-      margin-top: 30px;
-      border: none;
-      border-radius: 15px;
-    }
     a {
       color: #00bfa5;
       cursor: pointer;
+    }
+    .search-container {
+      margin: 20px auto;
+    }
+    .grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 20px;
+    }
+    .game {
+      background: #1e1e1e;
+      border-radius: 10px;
+      overflow: hidden;
+      width: 180px;
+    }
+    .game img {
+      width: 100%;
+      height: 100px;
+      object-fit: cover;
+    }
+    .game-title {
+      padding: 10px;
+      font-weight: bold;
+    }
+    #gameSection {
+      display: none;
     }
   </style>
 </head>
@@ -79,7 +95,7 @@
 
   <div id="loginContainer" class="active">
     <h2>Iniciar Sesión</h2>
-    <input type="email" id="loginEmail" placeholder="Correo electrónico" autocomplete="username" />
+    <input type="text" id="loginUser" placeholder="Nombre de usuario" autocomplete="username" />
     <input type="password" id="loginPassword" placeholder="Contraseña" autocomplete="current-password" />
     <button onclick="login()">Entrar</button>
     <p>¿No tienes cuenta? <a onclick="showRegister()">Regístrate aquí</a></p>
@@ -87,8 +103,7 @@
 
   <div id="registerContainer">
     <h2>Registro</h2>
-    <input type="text" id="regUser" placeholder="Usuario" autocomplete="username" />
-    <input type="email" id="regEmail" placeholder="Correo electrónico" autocomplete="email" />
+    <input type="text" id="regUser" placeholder="Nombre de usuario" autocomplete="username" />
     <input type="password" id="regPass" placeholder="Contraseña" autocomplete="new-password" />
     <input type="password" id="regRepeat" placeholder="Repetir contraseña" autocomplete="new-password" />
     <button onclick="register()">Registrarse</button>
@@ -102,92 +117,31 @@
 
   <div id="userInfo" style="display:none;">
     <p><strong>Usuario:</strong> <span id="infoUser"></span></p>
-    <p><strong>Correo:</strong> <span id="infoEmail"></span></p>
     <p><strong>Fecha registro:</strong> <span id="infoRegistered"></span></p>
     <p><strong>Premium:</strong> <span id="infoPremium"></span></p>
     <p><strong>Caduca:</strong> <span id="infoExpire"></span></p>
   </div>
-<div class="search-container">
-    <input type="text" id="searchInput" placeholder="Buscar juegos..." onkeyup="searchGames()">
+
+  <div id="gameSection">
+    <div class="search-container">
+      <input type="text" id="searchInput" placeholder="Buscar juegos..." onkeyup="searchGames()">
+    </div>
+
+    <div class="grid" id="gameGrid">
+      <div class="game"><a href="Slope-Source-code-main/index.html"><img src="Slope-Source-code-main/TemplateData/OIP.ico" alt="Slope"><div class="game-title">Slope</div></a></div>
+      <div class="game"><a href="Subway-Surfers/index.html"><img src="R.png" alt="Subway Surfers"><div class="game-title">Subway Surfers</div></a></div>
+      <div class="game"><a href="BurritoBison-main/index.html"><img src="BurritoBison-main/images/burrito-png.png" alt="Burrito Bison"><div class="game-title">Burrito Bison</div></a></div>
+      <div class="game"><a href="drive-mad-main/index.html"><img src="drive-mad-main/webapp/cover.jpg" alt="Drive Mad"><div class="game-title">Drive Mad</div></a></div>
+      <div class="game"><a href="1v1lol/"><img src="1v1lol/logo.png" alt="1v1.lol"><div class="game-title">1v1.lol</div></a></div>
+      <div class="game"><a href="bitlife/index.html"><img src="bitlife/logo.png" alt="Bitlife"><div class="game-title">Bitlife</div></a></div>
+      <div class="game"><a href="driftboss/index.html"><img src="driftboss/branding/logo1.png" alt="Drift Boss"><div class="game-title">Drift Boss</div></a></div>
+      <div class="game"><a href="happywheels/index.html"><img src="happywheels/166950-HUdYLFwSkLSLQIwO.png" alt="Happy Wheels"><div class="game-title">Happy Wheels</div></a></div>
+      <div class="game"><a href="pacman/index.html"><img src="pacman/sejarah-penciptaan-game-legendaris-pac-man-10aXQ8DlD0.jpg" alt="Pacman"><div class="game-title">Pacman</div></a></div>
+      <div class="game"><a href="skibidi1v100/index.html"><img src="skibidi1v100/logo.png" alt="Skibidi 1v100"><div class="game-title">Skibidi 1v100</div></a></div>
+      <div class="game"><a href="snowrider3d/index.html"><img src="snowrider3d/snow.png" alt="Snow Rider 3D"><div class="game-title">Snow Rider 3D</div></a></div>
+      <div class="game"><a href="volleyrandom/index.html"><img src="volleyrandom/splash.png" alt="Volley Random"><div class="game-title">Volley Random</div></a></div>
+    </div>
   </div>
-
-  <div class="grid" id="gameGrid">
-    <div class="game">
-      <a href="Slope-Source-code-main/index.html">
-        <img src="Slope-Source-code-main/TemplateData/OIP.ico" alt="Slope">
-        <div class="game-title">Slope</div>
-      </a>
-    </div>
-    <div class="game">
-      <a href="Subway-Surfers/index.html">
-        <img src="R.png" alt="Subway Surfers">
-        <div class="game-title">Subway Surfers</div>
-      </a>
-    </div>
-    <div class="game">
-      <a href="BurritoBison-main/index.html">
-        <img src="BurritoBison-main/images/burrito-png.png" alt="Burrito Bison">
-        <div class="game-title">Burrito Bison</div>
-      </a>
-    </div>
-    <div class="game">
-      <a href="drive-mad-main/index.html">
-        <img src="drive-mad-main/webapp/cover.jpg" alt="Drive Mad">
-        <div class="game-title">Drive Mad</div>
-      </a>
-    </div>
-    <div class="game">
-      <a href="1v1lol/">
-        <img src="1v1lol/logo.png" alt="1v1.lol">
-        <div class="game-title">1v1.lol</div>
-      </a>
-    </div>
-    <div class="game">
-      <a href="bitlife/index.html">
-        <img src="bitlife/logo.png" alt="Bitlife">
-        <div class="game-title">Bitlife</div>
-      </a>
-    </div>
-    <div class="game">
-      <a href="driftboss/index.html">
-        <img src="driftboss/branding/logo1.png" alt="Drift Boss">
-        <div class="game-title">Drift Boss</div>
-      </a>
-    </div>
-    <div class="game">
-      <a href="happywheels/index.html">
-        <img src="happywheels/166950-HUdYLFwSkLSLQIwO.png" alt="Happy Wheels">
-        <div class="game-title">Happy Wheels</div>
-      </a>
-    </div>
-    <div class="game">
-      <a href="pacman/index.html">
-        <img src="pacman/sejarah-penciptaan-game-legendaris-pac-man-10aXQ8DlD0.jpg" alt="Pacman">
-        <div class="game-title">Pacman</div>
-      </a>
-    </div>
-    <div class="game">
-      <a href="skibidi1v100/index.html">
-        <img src="skibidi1v100/logo.png" alt="Skibidi 1v100">
-        <div class="game-title">Skibidi 1v100</div>
-      </a>
-    </div>
-    <div class="game">
-      <a href="snowrider3d/index.html">
-        <img src="snowrider3d/snow.png" alt="Snow Rider 3D">
-        <div class="game-title">Snow Rider 3D</div>
-      </a>
-    </div>
-        <div class="game">
-      <a href="volleyrandom/index.html">
-        <img src="volleyrandom/splash.png" alt="Volley Random">
-        <div class="game-title">Volley Random</div>
-      </a>
-    </div>
-  </div> <!-- Fin del contenedor de .grid -->
-
-
-  <iframe id="gameFrame"></iframe>
 
   <script>
     function showRegister() {
@@ -201,12 +155,11 @@
     }
 
     function register() {
-      const username = document.getElementById('regUser').value.trim();
-      const email = document.getElementById('regEmail').value.trim().toLowerCase();
+      const username = document.getElementById('regUser').value.trim().toLowerCase();
       const password = document.getElementById('regPass').value;
       const repeatPass = document.getElementById('regRepeat').value;
 
-      if (!username || !email || !password || !repeatPass) {
+      if (!username || !password || !repeatPass) {
         alert('Por favor, completa todos los campos');
         return;
       }
@@ -218,27 +171,19 @@
 
       let users = JSON.parse(localStorage.getItem('users') || '{}');
 
-      for (const key in users) {
-        if (key === email) {
-          alert('El correo ya está registrado');
-          return;
-        }
-        if (users[key].username.toLowerCase() === username.toLowerCase()) {
-          alert('El usuario ya está en uso');
-          return;
-        }
+      if (users[username]) {
+        alert('El nombre de usuario ya está en uso');
+        return;
       }
 
       const now = new Date();
       const regDate = now.toLocaleDateString();
 
-      users[email] = {
-        username: username,
+      users[username] = {
         password: password,
         premium: true,
         expire: '31/12/2025',
-        registered: regDate,
-        played: []
+        registered: regDate
       };
 
       localStorage.setItem('users', JSON.stringify(users));
@@ -246,39 +191,33 @@
       showLogin();
 
       document.getElementById('regUser').value = '';
-      document.getElementById('regEmail').value = '';
       document.getElementById('regPass').value = '';
       document.getElementById('regRepeat').value = '';
     }
 
     function login() {
-      const email = document.getElementById('loginEmail').value.trim().toLowerCase();
+      const username = document.getElementById('loginUser').value.trim().toLowerCase();
       const password = document.getElementById('loginPassword').value;
 
-      if (!email || !password) {
-        alert('Introduce correo y contraseña');
+      if (!username || !password) {
+        alert('Introduce nombre de usuario y contraseña');
         return;
       }
 
       let users = JSON.parse(localStorage.getItem('users') || '{}');
 
-      if (!users[email]) {
+      if (!users[username] || users[username].password !== password) {
         alert('Credenciales incorrectas');
         return;
       }
 
-      if (users[email].password !== password) {
-        alert('Credenciales incorrectas');
-        return;
-      }
-
-      localStorage.setItem('loggedInUser', email);
-      showUserPanel(email);
+      localStorage.setItem('loggedInUser', username);
+      showUserPanel(username);
     }
 
-    function showUserPanel(email) {
+    function showUserPanel(username) {
       const users = JSON.parse(localStorage.getItem('users'));
-      const user = users[email];
+      const user = users[username];
 
       if (!user) return;
 
@@ -286,16 +225,15 @@
       document.getElementById('registerContainer').classList.remove('active');
       document.getElementById('userPanel').style.display = 'block';
       document.getElementById('userInfo').style.display = 'block';
-      document.getElementById('gameGallery').style.display = 'block';
+      document.getElementById('gameSection').style.display = 'block';
 
-      document.getElementById('displayUser').textContent = user.username;
-      document.getElementById('infoUser').textContent = user.username;
-      document.getElementById('infoEmail').textContent = email;
+      document.getElementById('displayUser').textContent = username;
+      document.getElementById('infoUser').textContent = username;
       document.getElementById('infoRegistered').textContent = user.registered;
       document.getElementById('infoPremium').textContent = user.premium ? 'Sí' : 'No';
       document.getElementById('infoExpire').textContent = user.expire;
 
-      document.getElementById('loginEmail').value = '';
+      document.getElementById('loginUser').value = '';
       document.getElementById('loginPassword').value = '';
     }
 
@@ -303,23 +241,17 @@
       localStorage.removeItem('loggedInUser');
       document.getElementById('userPanel').style.display = 'none';
       document.getElementById('userInfo').style.display = 'none';
-      document.getElementById('gameGallery').style.display = 'none';
-      document.getElementById('gameFrame').style.display = 'none';
+      document.getElementById('gameSection').style.display = 'none';
       showLogin();
     }
 
-    function openGame(url) {
-      document.getElementById('gameGallery').style.display = 'none';
-      const frame = document.getElementById('gameFrame');
-      frame.src = url;
-      frame.style.display = 'block';
-
-      const email = localStorage.getItem('loggedInUser');
-      let users = JSON.parse(localStorage.getItem('users'));
-      if (!users[email].played.includes(url)) {
-        users[email].played.push(url);
-        localStorage.setItem('users', JSON.stringify(users));
-      }
+    function searchGames() {
+      const input = document.getElementById('searchInput').value.toLowerCase();
+      const games = document.querySelectorAll('.game');
+      games.forEach(game => {
+        const title = game.querySelector('.game-title').textContent.toLowerCase();
+        game.style.display = title.includes(input) ? 'block' : 'none';
+      });
     }
 
     window.onload = function() {
